# lttng-ust

./: Makefile.am  configure.ac
doc/man/: lttng-ust.3.txt
include/lttng/: ust-malloc-config.h  ust-malloc.h  ust.h
liblttng-ust/: lttng-context-perf-counters.c  lttng-ust-comm.c  lttng-ust-malloc.c  tracepoint.c
liblttng-ust-comm/: lttng-ust-comm.c
liblttng-ust-ctl/: ustctl.c
liblttng-ust-fork/: ustfork.c
liblttng-ust-setuid/: Makefile.am  ustsetuid.c
libringbuffer/: ring_buffer_frontend.c  shm.c
